--- a/WindowsFormsApp2/App.config
+++ b/WindowsFormsApp2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="TestTask.Properties.Settings.TutorialDBConnectionString"
+            connectionString="Data Source=ольга-пк;Initial Catalog=TutorialDB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
